test_regress/t/t_timing_func_fork_bad.out
%Error: t/t_timing_func_fork_bad.v:13:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   13 |         f1 = 0;
      |         ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_timing_func_fork_bad.v:14:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   14 |         o1 = 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:23:9: Writing to an output automatic variable of a task after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   23 |         o1 = 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:31:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   31 |         f2 = #5 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:33:9: Writing to an inout automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   33 |         io2 = 0;
      |         ^~~
%Error: t/t_timing_func_fork_bad.v:43:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   43 |         f3 = 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:44:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   44 |         o3 = 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:52:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   52 |         f4 = @e 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:54:9: Writing to an inout automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   54 |         io4 = 0;
      |         ^~~
%Error: t/t_timing_func_fork_bad.v:65:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   65 |         f5 = 0;
      |         ^~
%Error: t/t_timing_func_fork_bad.v:66:9: Writing to an output automatic variable of a function after a timing control is not allowed (IEEE 1800-2023 13.2.2)
                                       : ... note: In instance 't'
   66 |         o5 = 0;
      |         ^~
%Error: Exiting due to
